--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,7 +11,13 @@
       "src": "/img/map512.png",
       "type": "image/png",
       "sizes": "512x512"
-    }
+    },
+    {
+      "src": "/img/map192.png",
+      "type": "image/png",
+      "sizes": "192x192",
+      "purpose": "any maskable"
+    },
   ],
   "start_url": ".",
   "background_color": "#fff",
